--- a/app/src/main/res/layout/problems_adapter_view.xml
+++ b/app/src/main/res/layout/problems_adapter_view.xml
@@ -3,8 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/probAdptrCardViewId"
@@ -20,58 +22,109 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="10dp"
+            android:background="#D5F6FB"
             >
             <TextView
-                android:textColor="#3AA7E8"
+                android:layout_gravity="center"
+                android:transitionName="problemTitleTransition"
+                android:layout_margin="10dp"
+                android:textColor="@color/bgBlue"
                 android:id="@+id/probAdptrTitleId"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="40sp"
+                android:textSize="30sp"
                 android:text="problem title"
                 android:textStyle="bold"
             />
-            <TextView
-                android:id="@+id/probAdptrAuthorId"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="problem title"
-                android:textStyle="bold"
+            <ImageView
+                android:layout_margin="10dp"
+                android:id="@+id/probAdptrCatIconId"
+                android:layout_gravity="center"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/cat_icons_algebra"
                 />
             <TextView
+                android:layout_margin="10dp"
                 android:id="@+id/probAdptrCategoryId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
-                android:text="problem title"
-                android:textStyle="bold"
-                />
+                android:text="problem category"
+                android:textAlignment="center"
+                android:textColor="#000"
+            />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+                <ProgressBar
+                    android:layout_gravity="center"
+                    android:layout_weight="4"
+                    android:layout_margin="20dp"
+                    android:id="@+id/probAdptrSuccssRateBar"
+                    style="@android:style/Widget.ProgressBar.Horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:progressDrawable="@drawable/my_custom_progressbar"
+                    />
+
+                <TextView
+                    android:id="@+id/probAdptrSuccssRate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:text="25%"
+                    android:textAlignment="center"
+                    android:textColor="@color/bgBlue"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+
+
 
             <TextView
-                android:id="@+id/probAdptrAndTypeId"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="ans type"
-                android:textStyle="bold"
-            />
-            <TextView
-                android:id="@+id/probAdptrDifficultyId"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="difficulty"
-                android:textStyle="bold"
-                />
-            <TextView
+                android:layout_margin="10dp"
                 android:id="@+id/probAdptrSeriesId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
                 android:text="series"
-                android:textStyle="bold"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="20sp" />
+
+            <TextView
+                android:layout_margin="10dp"
+                android:id="@+id/probAdptrAuthorId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:text="problem Author with creation date"
+                android:textAlignment="center"
+               android:textColor="#058817"
                 />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
+
+<!--
+<TextView
+android:id="@+id/probAdptrAndTypeId"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:textSize="20sp"
+android:splash_logo="ans type"
+android:textStyle="bold"
+    />
+<TextView
+android:id="@+id/probAdptrDifficultyId"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:textSize="20sp"
+android:splash_logo="difficulty"
+android:textStyle="bold"
+    />-->
