--- a/app/src/main/res/layout/problems_adapter_view.xml
+++ b/app/src/main/res/layout/problems_adapter_view.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="20dp"
+    android:padding="10dp"
+    app:cardUseCompatPadding="true"
+    app:cardElevation="20dp"
+    android:id="@+id/probAdptrCardViewId"
 
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/probAdptrCardViewId"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="20dp"
-        android:padding="10dp"
-        app:cardUseCompatPadding="true"
-
-        >
+    >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -24,18 +20,27 @@
             android:padding="10dp"
             android:background="#D5F6FB"
             >
+
             <TextView
-                android:layout_gravity="center"
-                android:transitionName="problemTitleTransition"
-                android:layout_margin="10dp"
-                android:textColor="@color/bgBlue"
                 android:id="@+id/probAdptrTitleId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
                 android:text="problem title"
+                android:textColor="@color/bgBlue"
+                android:textSize="25sp"
                 android:textStyle="bold"
+                android:transitionName="problemTitleTransition" />
+
+            <View
+                android:id="@+id/probAdptrHorizontalLine1"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_margin="20dp"
+                android:background="#C0C0C0"
             />
+
             <ImageView
                 android:layout_margin="10dp"
                 android:id="@+id/probAdptrCatIconId"
@@ -45,7 +50,7 @@
                 android:src="@drawable/cat_icons_algebra"
                 />
             <TextView
-                android:layout_margin="10dp"
+                android:layout_margin="30dp"
                 android:id="@+id/probAdptrCategoryId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -55,19 +60,27 @@
                 android:textColor="#000"
             />
 
+            <View
+                android:id="@+id/probAdptrHorizontalLine2"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_margin="20dp"
+                android:background="#C0C0C0" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 >
                 <ProgressBar
-                    android:layout_gravity="center"
-                    android:layout_weight="4"
-                    android:layout_margin="20dp"
                     android:id="@+id/probAdptrSuccssRateBar"
+                    android:layout_gravity="center"
+                    android:layout_weight="0.8"
+                    android:layout_margin="10dp"
                     style="@android:style/Widget.ProgressBar.Horizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:progressDrawable="@drawable/my_custom_progressbar"
+                    android:progress="50"
+                    android:progressDrawable="@drawable/tamims_progressbar_design"
                     />
 
                 <TextView
@@ -75,16 +88,67 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:text="25%"
+                    android:layout_weight="0.2"
+                    android:text="50%"
                     android:textAlignment="center"
                     android:textColor="@color/bgBlue"
-                    android:textSize="20sp"
+                    android:textSize="25sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
+                <ImageView
+                    android:layout_marginStart="5dp"
+                    android:id="@+id/starImageView"
+                    android:layout_width="40dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/star"
+                    android:tint="#ffaf2f"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/starNumber"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center"
+                    android:text="5"
+                    android:textColor="#ffaf2f"
+                    android:textSize="30sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/starImageView"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginTop="3dp"
+                    android:id="@+id/cupImageView"
+                    android:layout_width="40dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/trophy"
+                    android:tint="#000000"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/cupNumber"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="7"
+                    android:textColor="#000000"
+                    android:textSize="30sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/cupImageView"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
                 android:layout_margin="10dp"
@@ -96,6 +160,14 @@
                 android:textColor="#000"
                 android:textSize="20sp" />
 
+            <View
+                android:id="@+id/probAdptrHorizontalLine3"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@+id/starImageView"
+                android:layout_margin="5dp"
+                android:background="#C0C0C0" />
+
             <TextView
                 android:layout_margin="10dp"
                 android:id="@+id/probAdptrAuthorId"
@@ -104,12 +176,11 @@
                 android:textSize="15sp"
                 android:text="problem Author with creation date"
                 android:textAlignment="center"
-               android:textColor="#058817"
+               android:textColor="#1ca800"
                 />
 
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+</androidx.cardview.widget.CardView>
 
 <!--
 <TextView
