--- a/app/src/main/res/layout/activity_problem.xml
+++ b/app/src/main/res/layout/activity_problem.xml
@@ -19,16 +19,16 @@
             android:padding="5dp">
 
             <TextView
-                android:layout_gravity="center"
-                android:transitionName="problemTitleTransition"
                 android:id="@+id/probActvTitleId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_margin="5dp"
-                android:textColor="@color/bgBlue"
                 android:text="Problem title"
-                android:textSize="40sp"
-                android:textStyle="bold" />
+                android:textColor="@color/bgBlue"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:transitionName="problemTitleTransition" />
 
             <TextView
                 android:id="@+id/probActvAuthorId"
