--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="bgBlue">#00BFFF</color>
     <color name="textWhite">#FFFFFF</color>
+    <color name = "bglightBlue">#D5F6FB</color>
 </resources>
