--- a/app/src/main/res/layout/activity_problem.xml
+++ b/app/src/main/res/layout/activity_problem.xml
@@ -1,190 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.ProblemActivity">
-
-    <ScrollView
+    android:orientation="vertical"
+    tools:context=".Activities.ProblemActivity"
+    android:id="@+id/scroll_ques">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:context=".Activities.MainActivity"
+        android:padding="5dp">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/probActvTitleId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:text="Problem title"
+            android:textColor="@color/bgBlue"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:transitionName="problemTitleTransition"
+            />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbarFadeDuration="@android:integer/config_shortAnimTime">
+
+                <com.google.android.material.chip.ChipGroup
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fadeScrollbars="true"
+                    android:fadingEdge="horizontal"
+                    app:singleLine="true"
+                    android:id="@+id/tags" />
+            </HorizontalScrollView>
+
+            <ImageButton
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="3dp"
+                android:onClick="showDetails"
+                android:scaleType="fitCenter"
+                android:src="@drawable/settings" />
+
+
+        </RelativeLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="?android:listDivider"
+            android:layout_marginVertical="10dp" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/graph_holder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="#FFFFFF"
+            android:visibility="visible"
+            android:layout_marginVertical="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.example.buet_edu_project_one_vmasum.Graph.GraphView
+                android:id="@+id/graph"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/size_unknown"
+                android:clickable="true"
+                android:visibility="visible"
+                app:layout_constraintDimensionRatio="1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/default_stick"
+                android:layout_width="@dimen/add_new_width"
+                android:layout_height="@dimen/new_stick_height"
+                android:layout_marginBottom="@dimen/fab_margin"
+                android:src="@drawable/match_stick"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toTopOf="@+id/default_coin"
+                app:layout_constraintEnd_toEndOf="@+id/default_coin" />
+
+            <ImageView
+                android:id="@+id/default_coin"
+                android:layout_width="@dimen/add_new_width"
+                android:layout_height="@dimen/add_new_width"
+                android:layout_alignStart="@id/add_button"
+                android:layout_alignLeft="@id/add_button"
+                android:layout_alignBottom="@id/add_button"
+                android:layout_marginBottom="@dimen/fab_margin"
+                android:src="@drawable/coin_skin_1"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toTopOf="@+id/add_button"
+                app:layout_constraintEnd_toEndOf="@+id/add_button" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/add_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/fab_corner_margin"
+                android:background="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:backgroundTint="#66BB6A"
+                android:focusable="true"
+                android:onClick="toggleAddFAB"
+                android:scaleType="fitCenter"
+                android:src="@drawable/icons8_add"
+                android:visibility="visible"
+                app:fabSize="normal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:pressedTranslationZ="12dp" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="4dp"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/ContentText"
+            android:id="@+id/question_text"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/HeaderText"
+            android:text="@string/answer_text"/>
+
+        <com.example.buet_edu_project_one_vmasum.Answer.AnswerLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="5dp">
+            android:id="@+id/answer_container"
+            android:paddingLeft="@dimen/content_padding">
 
-            <TextView
-                android:id="@+id/probActvTitleId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="5dp"
-                android:text="Problem title"
-                android:textColor="@color/bgBlue"
-                android:textSize="30sp"
-                android:textStyle="bold"
-                android:transitionName="problemTitleTransition" />
+        </com.example.buet_edu_project_one_vmasum.Answer.AnswerLayout>
 
-            <TextView
-                android:id="@+id/probActvAuthorId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="Problem title"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/WarningText"
+            android:background="@drawable/warning_background"
+            android:id="@+id/answer_constrain" />
 
-            <TextView
-                android:id="@+id/probActvCategoryId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="Problem category"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Submit"
+            android:onClick="checkAnswer"
+            style="@style/Button" />
 
-            <TextView
-                android:id="@+id/probActvDifficultyId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="Problem difficulty"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/probActvCreationDateId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="Problem Creation Date"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/probActvSeriesId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="Problem Series"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/probActvDescriptionId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="Problem Description"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <androidx.viewpager.widget.ViewPager
-                android:id="@+id/des_image_viewpager"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_margin="5dp"></androidx.viewpager.widget.ViewPager>
-
-            <TextView
-                android:id="@+id/probActvStatementId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="Problem Statement"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/probActvRestrictionsId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:background="#FA7272"
-                android:text="Problem Restrictrion"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/probActvprobSchemaButtonId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Show Problem Schema" />
-
-            <TextView
-                android:id="@+id/probActvProblemScemaId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="Problem Scema"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:visibility="gone" />
-
-            <TextView
-
-                android:id="@+id/probActvOptionsId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="Problem Options"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/probActvAnsTypeId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="Problem Ans type"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/probActvAnsId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="Problem Ans"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/probActvSolSchemaButtonId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Show Sol Schema" />
-
-            <TextView
-                android:visibility="gone"
-                android:id="@+id/probActvSolSchemaId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="Problem solution Schema"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <androidx.viewpager.widget.ViewPager
-                android:id="@+id/ans_image_viewpager"
-                android:layout_width="match_parent"
-                android:layout_height="300dp" />
-
-            <TextView
-                android:id="@+id/probActvExplantionId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="Problem Explanation"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-    </ScrollView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+</ScrollView>
