--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -6,4 +6,23 @@
     <dimen name="startLeft">119</dimen>
     <dimen name="endLeft">160</dimen>
 
+
+   <!-- form sabit-->
+    <dimen name="add_new_width">60dp</dimen>
+    <dimen name="new_stick_height">100dp</dimen>
+    <dimen name="fab_margin">32dp</dimen>
+    <dimen name="fab_corner_margin">20dp</dimen>
+    <dimen name="size_unknown">0dp</dimen>
+
+    <dimen name="heading_text">26sp</dimen>
+    <dimen name="heading_margin">5dp</dimen>
+
+    <dimen name="content_text">14sp</dimen>
+    <dimen name="content_padding">12dp</dimen>
+
+    <dimen name="warning_v_padding">8dp</dimen>
+    <dimen name="warning_l_padding">26dp</dimen>
+
+    <dimen name="ans_text">18sp</dimen>
+
 </resources>
