Image Loaded With Glide

--- a/app/src/main/res/layout/activity_problem.xml
+++ b/app/src/main/res/layout/activity_problem.xml
@@ -144,7 +144,9 @@
 
         <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="400dp"
+            android:id="@+id/question_image_scroll"
+            android:visibility="visible"
             >
             <LinearLayout
                 android:layout_width="wrap_content"
