--- a/app/src/main/res/layout/activity_problem.xml
+++ b/app/src/main/res/layout/activity_problem.xml
@@ -144,13 +144,13 @@
 
         <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="200dp"
             android:id="@+id/question_image_scroll"
             android:visibility="visible"
             >
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:id="@+id/question_image_holder"
                 />
